add search options for project
