# src/docs/swagger.yaml
@@ -469,6 +469,18 @@ paths:
         in: query
         name: limit
         type: integer
+      - description: Паттерн поиска по имени или по описанию
+        in: query
+        name: search
+        type: string
+      - description: Сортировка по updated_at или created_at
+        in: query
+        name: order
+        type: string
+      - description: Фильтрует проекты по полю archived
+        in: query
+        name: archived
+        type: boolean
       produces:
       - application/json
       responses:
